@@ -5,16 +5,8 @@ COPY artifact/*.jar wdk.jar
 RUN mkdir custom
 
 RUN jar -xf wdk.jar
-#RUN jdeps --print-module-deps \
-#    -q \
-#    -recursive \
-#    --multi-release 17 \
-#    --class-path="BOOT-INF/lib/*" \
-#    --module-path="BOOT-INF/lib/*" \
-#    wdk.jar > /modules
 
 RUN jlink --no-header-files --no-man-pages --compress=2 --strip-debug --add-modules java.base,java.scripting,java.sql,jdk.unsupported,java.se,jdk.crypto.ec --output custom/jre
-#RUN jlink --no-header-files --no-man-pages --compress=2 --strip-debug --add-modules $(cat /modules),jdk.unsupported,java.se,jdk.crypto.ec --output custom/jre
 
 FROM alpine:3.11
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en' LC_ALL='en_US.UTF-8'
